--- a/css/style.css
+++ b/css/style.css
@@ -132,3 +132,22 @@ p {
     }
 }
     
+/* Icons */
+.icon {
+    width: 40px;
+    height:40px;
+}
+
+.icon--primary {
+    fill: var(--color-primary);
+}
+
+.icon-container {
+    background: #f3f9fa;
+    width: 64px;
+    height: 64px;
+    border-radius: 100%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
