Button Media Quary

--- a/css/style.css
+++ b/css/style.css
@@ -218,3 +218,9 @@ p {
     display: inline-block;
     width: 100%;
 }
+
+@media screen and (min-width: 1024px) {
+    .btn {
+        font-size: 1.5rem;
+    }
+}
