--- a/css/style.css
+++ b/css/style.css
@@ -224,3 +224,17 @@ p {
         font-size: 1.5rem;
     }
 }
+
+/* Input */
+.input {
+    padding: 1.5rem 3.5rem;
+    border: 1px solid #ccc;
+    border-radius: 30px;
+    outline: 0;
+    color: var(--color-headings);
+}
+
+.input::placeholder {
+    color: #cdcbd7;
+    font-size: 2rem;
+}
