--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@
     --color-accent: #ff3400;
     --color-headings: #1b0760;
     --color-body-text: #918ca4;
+    --color-border: #ccc;
+    --border-radius: 30px;
 }
 
 html {
@@ -228,13 +230,29 @@ p {
 /* Input */
 .input {
     padding: 1.5rem 3.5rem;
-    border: 1px solid #ccc;
-    border-radius: 30px;
+    border: 1px solid var(--color-border);
+    border-radius: var(--border-radius);
     outline: 0;
     color: var(--color-headings);
+    flex-grow: 1;
+    padding: 1.5rem 1rem;
 }
 
 .input::placeholder {
     color: #cdcbd7;
     font-size: 2rem;
+}
+
+.input-group {
+    border: 1px solid var(--color-border);
+    border-radius: var(--border-radius);
+    display: flex;
+}
+
+.input-group .input {
+    border: 0;
+}
+
+.input-group .btn {
+    margin: 4px;
 }
