Build plan--popular Class

--- a/css/style.css
+++ b/css/style.css
@@ -292,6 +292,19 @@ p {
 }
 
 /* Plans */
+.plan--popular .card__header{
+    position: relative;
+}
+
+.plan--popular .card__header::before {
+    content: url(/css/images/popular.svg);
+    width: 40px;
+    display: inline-block;
+    position: absolute;
+    top: -6px;
+    right: 5%;
+}
+
 .plan__name {
     color: #fff;
     margin: 0;
