Build Quote Component and mass sorting

--- a/css/components/media-object.html
+++ b/css/components/media-object.html
@@ -1,17 +1,37 @@
 <div class="media">
-    <div class="media__image">
-      <img
-        class="icon"
-        src="/css/images/snap.png"
-        alt="Snapshot of landscape icon"
-      />
-    </div>
-    <div class="media__body">
-      <h3 class="media__title">Easy Start & Managed Updates</h3>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque magni
-        praesentium cum delectus est, animi exercitationem excepturi
-        consequatur quae.
-      </p>
-    </div>
+  <div class="media__image">
+    <img
+      class="icon"
+      src="/css/images/snap.png"
+      alt="Snapshot of landscape icon"
+    />
   </div>
+  <div class="media__body">
+    <h3 class="media__title">Easy Start & Managed Updates</h3>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque magni
+      praesentium cum delectus est, animi exercitationem excepturi consequatur
+      quae.
+    </p>
+  </div>
+</div>
+
+<!--icon sprite ref-->
+
+<div class="media">
+  <div class="media__image">
+    <span class="icon-container">
+      <svg class="icon icon--primary">
+        <use href="css/images/icon-sprite-sheet.svg#line"></use>
+      </svg>
+    </span>
+  </div>
+  <div class="media__body">
+    <h3 class="media__title">Easy Start & Managed Updates</h3>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque magni
+      praesentium cum delectus est, animi exercitationem excepturi consequatur
+      quae.
+    </p>
+  </div>
+</div>
