--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,10 @@
     --color-accent: #ff3400;
     --color-headings: #1b0760;
     --color-body-text: #918ca4;
+    --color-quote-text: #676475;
     --color-border: #ccc;
     --border-radius: 30px;
+
 }
 
 html {
@@ -55,10 +57,10 @@ p {
 /* Links */
 .link-arrow {
     color: var(--color-accent);
-    text-transform: uppercase;
-    text-decoration: none;
     font-size: 2rem;
     font-weight: bold;
+    text-decoration: none;
+    text-transform: uppercase;
 }
 
 .link-arrow::after {
@@ -81,11 +83,11 @@ p {
 /* Badges */
 .badge {
     border-radius: 20px;
-    padding: 0.5rem 2rem;
-    font-weight: 600;
-    white-space: nowrap;
     font-size: 2rem;
+    font-weight: 600;
+    padding: 0.5rem 2rem;
     transition: font-size 0.5s;
+    white-space: nowrap;
 }
 
 .badge--small {
@@ -115,9 +117,9 @@ p {
 
 /* Lists */
 .list {
+    color: var(--color-headings);
     list-style: none;
     padding: 0;
-    color: var(--color-headings);
 }
 
 .list--inline .list__item {
@@ -153,26 +155,26 @@ p {
 
 .icon-container {
     background: #f3f9fa;
-    width: 64px;
-    height: 64px;
     border-radius: 100%;
     display: inline-flex;
+    width: 64px;
+    height: 64px;
     justify-content: center;
     align-items: center;
 }
 
 /* Buttons */
 .btn {
+    border-radius: 40px;
+    border: 0;
+    cursor: pointer;
     font-size: 1.8rem;
     font-weight: 600;
-    text-transform: uppercase;
-    text-align: center;
-    padding: 2rem 3rem;
-    border: 0;
-    text-decoration: 0;
-    border-radius: 40px;
-    cursor: pointer;
     margin: 1rem 0;
+    padding: 2rem 3rem;
+    text-align: center;
+    text-decoration: 0;
+    text-transform: uppercase;
     transition: background 0.12s;
 }
 
@@ -208,8 +210,8 @@ p {
 
 .btn--outline {
     background: #fff;
-    color: var(--color-headings);
     border: 2px solid var(--color-headings);
+    color: var(--color-headings);
 }
 
 .btn--outline:hover {
@@ -230,13 +232,13 @@ p {
 
 /* Input */
 .input {
-    padding: 1.5rem 3.5rem;
-    border: 1px solid var(--color-border);
     border-radius: var(--border-radius);
-    outline: 0;
+    border: 1px solid var(--color-border);
     color: var(--color-headings);
     flex-grow: 1;
+    outline: 0;
     padding: 1.5rem 1rem;
+    padding: 1.5rem 3.5rem;
 }
 
 .input::placeholder {
@@ -298,18 +300,18 @@ p {
 
 .plan--popular .card__header::before {
     content: url(/css/images/popular.svg);
-    width: 40px;
     display: inline-block;
     position: absolute;
-    top: -6px;
     right: 5%;
+    top: -6px;
+    width: 40px;
 }
 
 .plan__name {
     color: #fff;
-    margin: 0;
-    font-weight: 500;
     font-size: 2.4rem;
+    font-weight: 500;
+    margin: 0;
 }
 
 .plan__price {
@@ -319,15 +321,15 @@ p {
 .plan__billing-cycle {
     font-size: 2.4rem;
     font-weight: 300;
-    opacity: .8;
     margin-right: 1rem;
+    opacity: .8;
 }
 
 .plan__description {
+    display: block;
     font-size: 2rem;
     font-weight: 300;
     letter-spacing: 1px;
-    display: block;
 }
 
 .plan .list__item {
@@ -370,4 +372,51 @@ p {
     margin-left: 2rem;
 }
 
+/* Quotes */
+.quote {
+    font-size: 3rem;
+    font-style: italic;
+    color: var(--color-quote-text);
+    line-height: 1.3;
+}
 
+.quote__text::before {
+    content: open-quote;
+}
+
+.quote__text::after {
+    content: close-quote;
+}
+
+.quote__author {
+    font-size: 3rem;
+    font-weight: 500;
+    font-style: normal;
+    margin-bottom: 0;
+}
+
+.quote__company {
+    color: var(--color-headings);
+    opacity: .4;
+    font-size: 2rem;
+    font-style: normal;
+}
+
+.quote__line {
+    position: relative;
+    bottom: 10px;
+}
+
+@media screen and (min-width: 950px) {
+    .quote {
+        font-size: 2rem;
+    }
+
+    .quote__author {
+        font-size: 2.4rem;
+    }
+
+    .quote__company {
+        font-size: 1.6rem;
+    }
+}
