Build Grid and Build Testimonial Component

--- a/css/style.css
+++ b/css/style.css
@@ -149,8 +149,17 @@ p {
     height:40px;
 }
 
+.icon--small {
+    width: 30px;
+    height: 30px;
+}
+
 .icon--primary {
     fill: var(--color-primary);
+}
+
+.icon--white {
+    fill: #fff;
 }
 
 .icon-container {
@@ -161,6 +170,11 @@ p {
     height: 64px;
     justify-content: center;
     align-items: center;
+}
+
+
+.icon-container--accent {
+    background: var(--color-accent);
 }
 
 /* Buttons */
@@ -407,6 +421,8 @@ p {
     bottom: 10px;
 }
 
+
+
 @media screen and (min-width: 950px) {
     .quote {
         font-size: 2rem;
@@ -418,5 +434,54 @@ p {
 
     .quote__company {
         font-size: 1.6rem;
+    }
+}
+
+/* Grids */
+.grid {
+    display: grid;
+}
+
+@media screen and (min-width:768px) {
+    .grid--cols-2 {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .grid--cols-2 {
+        grid-template-columns: repeat(3, 1fr);
+    }  
+}
+
+/* Testimonials */
+.testimonial {
+    padding: 4rem;
+}
+
+.testimonial__image {
+    position: relative;
+    margin: 0 3rem;
+}
+
+.testimonial__image > img {
+    width: 100%;
+}
+
+.testimonial__image > .icon-container {
+    position: absolute;
+    top: 3rem;
+    right: -32px;
+}
+
+
+@media screen and (min-width: 768px) {
+    .testimonial .quote,
+    .testimonial .quote__author{
+        font-size: 2.4rem;
+    }
+
+    .testimonial .quote {
+        margin-left: 6rem;
     }
 }
