--- a/css/style.css
+++ b/css/style.css
@@ -192,6 +192,11 @@ p {
     transition: background 0.12s;
 }
 
+.btn--stretched {
+    padding-left: 6rem;
+    padding-right: 6rem;
+}
+
 .btn--primary {
     background: var(--color-primary);
     color: #fff;
@@ -449,7 +454,7 @@ p {
 }
 
 @media screen and (min-width: 1024px) {
-    .grid--cols-2 {
+    .grid--cols-3 {
         grid-template-columns: repeat(3, 1fr);
     }  
 }
@@ -483,5 +488,39 @@ p {
 
     .testimonial .quote {
         margin-left: 6rem;
+    }
+}
+
+/* Callouts */
+.callout {
+    padding: 4rem;
+    border-radius: 5px;
+}
+
+.callout--primary {
+    background: var(--color-primary);
+}
+
+.callout__content {
+    text-align: center;
+}
+
+.callout .btn {
+    justify-self: center;
+    align-self: center;
+}
+
+@media screen and (min-width: 768px) {
+    .callout__content {
+        text-align: left;
+    }
+
+    .callout .btn {
+        margin: 0 2rem;
+        justify-self: start;
+    }
+
+    .callout .grid--cols-2 {
+        grid-template-columns: 1fr auto;
     }
 }
