Build Collapsible Component

--- a/css/style.css
+++ b/css/style.css
@@ -524,3 +524,41 @@ p {
         grid-template-columns: 1fr auto;
     }
 }
+
+/* Collapsibles */
+.collapsible {
+    overflow: hidden;
+}
+.collapsible__header {
+    display: flex;
+    justify-content: space-between;
+}
+
+.collapsible__heading {
+    margin-top: 0;
+    margin-bottom: 0;
+    font-size: 3rem;
+}
+
+.collapsible__chevron {
+    transform: rotateZ(-90deg);
+}
+
+.collapsible__content {
+    max-height: 0;
+    opacity: 0;
+    transition:all 0.27s;
+}
+
+.collapsible--expanded .collapsible__chevron {
+    transform: rotateZ(0);
+}
+
+.collapsible--expanded .collapsible__content {
+    max-height: 100%;
+    opacity: 1;
+}
+
+
+
+
