--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,7 @@ a {
     text-decoration: 0;
     text-transform: uppercase;
     transition: background 0.12s;
+    outline: 0;
 }
 
 .btn--stretched {
@@ -255,6 +256,13 @@ a {
     width: 100%;
 }
 
+.btn .icon {
+    width: 2rem;
+    height: 2rem;
+    margin-right: 1rem;
+    vertical-align: middle;
+}
+
 @media screen and (min-width: 1024px) {
     .btn {
         font-size: 1.5rem;
@@ -266,9 +274,7 @@ a {
     border-radius: var(--border-radius);
     border: 1px solid var(--color-border);
     color: var(--color-headings);
-    flex-grow: 1;
     outline: 0;
-    padding: 1.5rem 1rem;
     padding: 1.5rem 3.5rem;
 }
 
@@ -285,6 +291,8 @@ a {
 
 .input-group .input {
     border: 0;
+    flex-grow: 1;
+    padding: 1.5rem 2rem;
 }
 
 .input-group .btn {
@@ -706,5 +714,31 @@ a {
       padding-top: 0;
     }
   }
+
+  /* * Domain Block */
+  .block__domain .input-group {
+    box-shadow: 0 0 30px 20px #e6ebee;
+    border: 0;
+    margin: 4rem auto;
+    max-width: 670px;
+  }
+
+  .block__domain__prices {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 6rem);
+    font-size: 2rem;
+    font-weight: 600;
+    justify-items: center;  
+    max-width: 700px;
+    margin: 0 auto;
+  }
+
+  @media screen and (min-width: 768px) {
+    .block__domain__prices {
+        grid-template-columns:repeat(auto-fit, minmax(10rem, 1fr));
+    }
+  }
   
+
 
