Build Plans Block

--- a/css/style.css
+++ b/css/style.css
@@ -333,6 +333,22 @@ a {
 }
 
 /* * Plans */
+.plan {
+    transition: all 0.3s ease-out;
+}
+
+.plan:hover {
+    transform: scale(1.05);
+}
+
+.plan--popular {
+    transform: scale(1.1);
+}
+
+.plan--popular:hover {
+    transform: scale(1.15);
+}
+
 .plan--popular .card__header{
     position: relative;
 }
@@ -739,6 +755,15 @@ a {
         grid-template-columns:repeat(auto-fit, minmax(10rem, 1fr));
     }
   }
-  
+
+  /* * Plans Block */
+.block__plans .grid {
+    gap: 8rem 6rem;
+}  
+
+.block__plans .card {
+    max-width: 450px;
+    margin: 0 auto;
+}
 
 
