error-Fix Picture>Source:type set to img not image

--- a/css/components/banner.html
+++ b/css/components/banner.html
@@ -8,14 +8,14 @@
     <div>
       <picture>
         <source
-          type="img/webp"
+          type="image/webp"
           srcset="
             /css/images/banner/new/webp/banner@1x.webp 1x,
             /css/images/banner/new/webp/banner@2x.webp 2x
           "
         />
         <source
-          type="img/png"
+          type="image/png"
           srcset="
             /css/images/banner/new/png/banner@1x.png 1x,
             /css/images/banner/new/png/banner@2x.png 2x
