--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,9 @@ h2 {
 }
 
 h3 {
-    font-size: 3rem;
+    font-size: 2.8rem;
+    font-weight: 600;
+    line-height: 1.3;
 }
 
 p {
@@ -56,10 +58,21 @@ p {
 }
 
 
-@media screen and (min-width:1024) {
-    h1 {
-        font-size: 8rem;
-    }
+@media screen and (min-width:1024px) {
+   
+  body {
+    font-size: 1.8rem;
+  }
+  h1 {
+    font-size: 8rem;
+  }
+  h2 {
+    font-size: 4rem;
+  }
+  h3 {
+    font-size: 2.4rem;
+  }
+
 }
 
 /* * Links */
@@ -67,7 +80,7 @@ a {
     text-decoration: none;
 }
 
-.link-arrow {
+.link--arrow {
     color: var(--color-accent);
     font-size: 2rem;
     font-weight: bold;
@@ -75,18 +88,18 @@ a {
     text-transform: uppercase;
 }
 
-.link-arrow::after {
-    content: "-->";
+.link--arrow::after {
+    content: "->";
     margin-left: 5px;
     transition: margin 0.12s ease-in-out;
 }
 
-.link-arrow:hover::after {
+.link--arrow:hover::after {
     margin-left: 11px;
 }
 
 @media screen and (min-width: 1024px) {
-    .link-arrow {
+    .link--arrow {
         font-size: 1.5rem;
     }
 
@@ -766,4 +779,28 @@ a {
     margin: 0 auto;
 }
 
+/* * Features Block */
 
+.feature {
+    gap: 4rem 2rem;
+    margin: 12rem 0rem;
+}
+
+.feature:first-of-type {
+    margin-top: 6rem;
+}
+
+.feature__heading {
+    margin: 0 1rem;
+}
+
+@media screen and (min-width: 768px) {
+    .feature:nth-of-type(even) .feature__content {
+        order: 2;
+    }
+    
+    .feature__image {
+        width: 100%;
+    }
+}
+    
