PUT LAYOUT TOGETHER

--- a/css/components/TEST.html
+++ b/css/components/TEST.html
@@ -8,33 +8,31 @@
     <link rel="stylesheet" href="/css/normalize.css" />
   </head>
   <body>
-    <section class="site-block site-block--dark site-block--skew-left hero">
-      <div class="grid grid--cols-2 container">
-        <header class="site-block__header hero__content">
-          <h1 class="site-block__heading">Cloud Hosting for Pros</h1>
-          <p class="hero__tagline">Deploy your website in less than 5 mins.</p>
-          <a class="btn btn--accent btn--stretched">Get Started</a>
-        </header>
-        <div>
-          <picture>
-            <source
-              type="image/webp"
-              srcset="
-                /css/images/banner/new/webp/banner@1x.webp 1x,
-                /css/images/banner/new/webp/banner@2x.webp 2x
-              "
-            />
-            <source
-              type="image/png"
-              srcset="
-                /css/images/banner/new/png/banner@1x.png 1x,
-                /css/images/banner/new/png/banner@2x.png 2x
-              "
-            />
-            <img class="hero__img" src="/css/images/banner/banner.png" alt="" />
-          </picture>
-        </div>
+    <button class="btn btn--primary">Click Me!</button>
+    <a href="#" class="btn btn--secondary">apply now!</a>
+    <button class="btn btn--accent">Button</button>
+    <br />
+    <br />
+    <br />
+    <button class="btn btn--outline btn--block">button</button>
+    <a href="#" class="btn btn--accent btn--block">anchor</a>
+
+    <div class="media">
+      <div class="media__image">
+        <span class="icon-container">
+          <svg class="icon icon--primary">
+            <use href="css/images/icon-sprite-sheet.svg#line"></use>
+          </svg>
+        </span>
       </div>
-    </section>
+      <div class="media__body">
+        <h3 class="media__title">Easy Start & Managed Updates</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque magni
+          praesentium cum delectus est, animi exercitationem excepturi
+          consequatur quae.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
